Fix sonar issues
- fixing sonar issues on code to generate new models-* artifacts
with parent new dependencies.

Issue-ID: POLICY-5240
Change-Id: I41e01ededbc20c9b389be1167691aeb4e03cd0fb
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>